Fix nip05 overflow

--- a/src/components/ProfileContact/ProfileContact.module.scss
+++ b/src/components/ProfileContact/ProfileContact.module.scss
@@ -40,7 +40,7 @@
           line-height: 14px;
           span {
             display: inline-block;
-            max-width: 362px;
+            max-width: 308px;
             overflow: hidden;
             text-overflow: ellipsis;
             word-wrap: normal;
